--- a/dotnet/Dockerfile
+++ b/dotnet/Dockerfile
@@ -4,10 +4,11 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+EXPOSE 5171
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY . .
+COPY . /src
 RUN dotnet restore "src/Service/Service.csproj"
 WORKDIR "src/Service"
 RUN dotnet build "Service.csproj" -c Release -o /app/build
@@ -18,4 +19,5 @@ RUN dotnet publish "Service.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
 ENTRYPOINT ["dotnet", "Service.dll"]
