--- a/dotnet/src/Service/appsettings.Development.json
+++ b/dotnet/src/Service/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ExternalService": {
     "BaseUrl": "https://localhost:8080/external-service",
     "CircuitBreaker.RetriesBeforeBreakingCount": "3",
