--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,8 @@ services:
       - "5443:443"
       - "5081:7171"
       - "5082:5171"
+
+  golang:
+    build: golang
+    ports:
+      - "6080:8010"
