--- a/.gitignore
+++ b/.gitignore
@@ -361,7 +361,4 @@ MigrationBackup/
 .idea
 
 .vscode
-
-#!! ERROR: vscode is undefined. Use list command to see defined gitignore types !!#
-
-# End of https://www.gitignore.io/api/csharp,vscode
+/results
