--- a/dotnet/src/Service/appsettings.json
+++ b/dotnet/src/Service/appsettings.json
@@ -6,11 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ExternalService": {
-    "BaseUrl": "https://localhost:8080/external-service",
-    "CircuitBreaker.RetriesBeforeBreakingCount": "3",
-    "CircuitBreaker.BreakDuration": "00:00:05.000",
-    "RetriesCount": "3",
-    "Timeout": "00:00:03.000"
+  "runtimeOptions": {
+    "configProperties": {
+      "System.GC.Server": true,
+      "System.GC.RetainVM": true
+    }
   }
 }
